fix bugs on mobile

--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -3,7 +3,7 @@
 	padding-bottom: $default-spacing;
 
 	@include media($mobile) {
-		padding-top: $default-spacing/2;
+		padding-top: $default-spacing * 1.5;
 		padding-bottom: $default-spacing/2;
 	}
 }
